# NinjaTyperProjectPJC

./: CMakeLists.txt  README.md  main.cpp
assets/: words_eng.txt  words_pl.txt
assets/save/: gamesave
